refactor: SonarLint Issue 수정 완료